[package]
name = "expressur"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_decimal = {version = "1.28", features = ["maths", "serde"]}
rust_decimal_macros = "1.28"
num-format = "0.4"

[[bin]]
name = "load_test"

[profile.release-opt]
inherits = "release"
lto = true
overflow-checks = false